# LearnKit

./: .gitignore  .pre-commit-config.yaml  AGENTS_V2.md  AGENTS_combined.md  README.md  YC_CODEBASE_REVIEW.md  agents.md  agents_v2_production.md  debugging_and_improvements_report.md  improvements.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
Docs/: FINAL_BENCHMARK_NUMBERS_2026-06-21.txt  FINAL_MODEL_MATRIX_2026-06-21.txt  LEARNKIT_CONSOLIDATED_FLOW_PLAN.md  LearnKit_design_doc.md  README.md  learnKit_archiecture.txt  learnkit_agents.md  learnkit_architecture.md  packaging_and_testing.md  run_server.py  server.py
Docs/dashboard/: README.md  app.html  docs.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Docs/dashboard/src/: App.tsx
Docs/data/: playground_contract.db  playground_python.db  playground_sql.db
architecture/: README.md  agent_runtime_flow.mmd  benchmark_flow.mmd  full_system_flow.mmd  runtime_flow.mmd  storage_lifecycle.mmd
benchmarks/: .env.example  BENCHMARKING_GUIDE.txt  BENCHMARK_SUMMARY.md  README.md  RESULTS.md  _inspect_utility.py  agentic_bench.py  attribution_summary.py  evolution_live.py  generate_excel.py  generate_simple_replace.py  graders.py  injection_ablation.py  pbe_slr_summary.json  prepare_splits.py  react_live.py  retrieval_eval.py  run_agent_learn.py  run_agentic_matrix.py  run_agentic_suite.py  run_all.sh  run_custom.py  run_pbebench.py  run_slr_bench.py  synthesis_agentic.py
benchmarks/_archive/scratch_scripts/: _analyze_help_hurt.py  _gen_hard_tasks.py
benchmarks/results/20260529_155542/: compounding.csv  raw.json  summary.json  summary.md
benchmarks/results/20260529_180432/: compounding.csv  raw.json  summary.json  summary.md
benchmarks/swe_bench_lite/: README.md  eval_all_30.py  generate_predictions.py  inspect_pytest_files.py  inspect_single_task.py  inspect_tasks.py  populate_skipping_skill.py  run_eval.sh  setup.sh  test_qwen.py  test_search_replace.py
benchmarks/tasks/: contract_summarization.jsonl  pbebench_lite_pilot.jsonl  python_debugging.jsonl  simple_replace.jsonl  sql_authoring.jsonl
docs/: index.html
examples/: agent_learn_demo.py  benchmark.py  benchmark_multi_iteration.resolved  benchmark_results.json  benchmark_walkthrough.md  cleanup_coder_agent.py  dashboard_seed.py  dashboard_seed_multi.py  dashboard_seed_records.py  langchain_demo.py  minimal_agent.py  multi_iteration_benchmark.py  multi_iteration_results.json  production_e2e_test.py  quick_start.py  scratch_search.py  test_package_connection.py
frontend/: Landing.html
learnkit/: __init__.py  attribution.py  classifier.py  cli.py  composer.py  compressor.py  consolidation.py  core.py  distiller.py  diversity.py  errors.py  evaluator.py  inference_mode.py  logging.py  memory_quality.py  observability.py  playbook.py  procedural.py  procedure_evolution.py  replay.py  retriever.py  router.py  skills_loader.py  tool_tracker.py  trajectory.py
learnkit/adapters/: __init__.py  autogen.py  base.py  crewai.py  langchain.py  langgraph.py  llamaindex.py  openai_agents.py  openai_raw.py  registry.py
learnkit/backends/: __init__.py  base.py  mem0.py  qdrant.py  registry.py  sqlite.py  zep.py
learnkit/evolution/: __init__.py  gepa.py
learnkit/schemas/: __init__.py  base.py  fact.py  failure.py  heuristic.py  preference.py  skill.py  strategy.py  trace.py
scripts/: summarize_matrix.py
skills/coding/code_review_checklist/: SKILL.md  metadata.json
skills/coding/debug_python_error/: SKILL.md  metadata.json
skills/coding/pbe_string_transformation/: SKILL.md  metadata.json
skills/coding/refactor_for_readability/: SKILL.md  metadata.json
skills/coding/symbolic_logic_reasoning/: SKILL.md  metadata.json
skills/coding/write_unit_test/: SKILL.md  metadata.json
skills/general/api_integration_debugging/: SKILL.md  metadata.json
skills/general/data_cleaning_pipeline/: SKILL.md  metadata.json
skills/legal/contract_summarization/: SKILL.md  metadata.json
skills/legal/gdpr_clause_check/: SKILL.md  metadata.json
skills/legal/liability_clause_extraction/: SKILL.md  metadata.json
tests/: conftest.py  test_agent_learn.py  test_backend_contract.py  test_blocks_hardening.py  test_cli.py  test_consolidation.py  test_custom_graders.py  test_diversity.py  test_edge_cases.py  test_memory_quality.py  test_phase2.py  test_phase3.py  test_primary_tiebreaker.py  test_production_hardening.py  test_record_types.py  test_retriever_adapters.py  test_runs_tracking.py  test_skills_loader.py  test_sprint1_retrieval_fixes.py  test_sqlite_backend.py
tests/fixtures/: sample_traces.jsonl
(+100 files in other folders)
