[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learnkit-ai"
version = "0.0.3"
description = "A thin experience distillation layer for AI agents to compound knowledge over time."
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "ai-agents",
    "agent-memory",
    "self-improving-agents",
    "experience-distillation",
    "llm",
    "retrieval",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dspy-ai>=2.4.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "sqlite-vec>=0.1.0",
    "pydantic>=2.0.0",
    "opentelemetry-sdk>=1.25.0",
    "anthropic>=0.34.0",
]

[project.optional-dependencies]
mem0 = ["mem0ai>=0.0.20"]
zep = ["zep-python>=2.0.0"]
qdrant = ["qdrant-client>=1.10.0"]
langchain = ["langchain>=1.0.0", "langchain-anthropic>=1.0.0", "langchain-core>=1.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["learnkit"]

[project.urls]
Homepage = "https://pypi.org/project/learnkit-ai/"
PyPI = "https://pypi.org/project/learnkit-ai/"
piwheels = "https://www.piwheels.org/project/learnkit-ai/"

[project.scripts]
learnkit = "learnkit.cli:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Conservative gating set: pyflakes (F) + a slice of pycodestyle (E).
# Keep the gate tight enough to catch real bugs (unused imports, undefined
# names) without forcing a stylistic rewrite of the whole tree.
select = ["E", "F", "W"]
ignore = ["E501"]  # line length is enforced by the formatter, not the linter

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true

